--- a/pom.xml
+++ b/pom.xml
@@ -18,102 +18,103 @@
 	      <groupId>javax.servlet.jsp</groupId>
 	      <artifactId>jsp-api</artifactId>
 	   	  <version>2.1</version>
-  	  </dependency>
-  	  <dependency>
-	   <groupId>org.hibernate</groupId>
-	   <artifactId>hibernate-core</artifactId>
-	   <version>3.6.0.Final</version>
-	  </dependency>
-	  <dependency>
-	   <groupId>org.hibernate</groupId>
-	   <artifactId>hibernate-entitymanager</artifactId>
-	   <version>3.6.0.Final</version>
-	  </dependency>
-	  <dependency>
+  	</dependency>
+	<dependency>
 	   <groupId>org.slf4j</groupId>
 	   <artifactId>slf4j-simple</artifactId>
 	   <version>1.6.4</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	  <groupId>com.oracle</groupId>
 	  <artifactId>ojdbc6</artifactId>
 	  <version>11.2.0</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>javax.servlet</groupId>
 	   <artifactId>javax.servlet-api</artifactId>
 	   <version>3.0.1</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>javax.servlet</groupId>
 	   <artifactId>jstl</artifactId>
 	   <version>1.2</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.hibernate</groupId>
 	   <artifactId>hibernate-validator</artifactId>
 	   <version>4.2.0.Final</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>javax.validation</groupId>
 	   <artifactId>validation-api</artifactId>
 	   <version>1.1.0.Final</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-beans</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-context-support</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-web</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-expression</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-webmvc</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-core</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 	   <groupId>org.springframework</groupId>
 	   <artifactId>spring-context</artifactId>
 	   <version>3.1.4.RELEASE</version>
-	  </dependency>
-	  <dependency>
+	</dependency>
+	<dependency>
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-mapper-asl</artifactId>
 		<version>1.9.13</version>
-		</dependency>
-		  <dependency>
-		      <groupId>com.fasterxml.jackson.core</groupId>
-		      <artifactId>jackson-core</artifactId>
-		      <version>2.2.3</version>
-		  </dependency>
-		  <dependency>
-		      <groupId>com.fasterxml.jackson.core</groupId>
-		      <artifactId>jackson-databind</artifactId>
-		      <version>2.2.3</version>
-		  </dependency>
-		  <dependency>
-		      <groupId>com.fasterxml.jackson.core</groupId>
-		      <artifactId>jackson-annotations</artifactId>
-		      <version>2.2.3</version>
-		  </dependency>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.2.3</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.2.3</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.2.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+  </dependency>
+  <dependency>
+  	<groupId>com.revature</groupId>
+  	<artifactId>C2IMS</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  </dependency>
+  
   </dependencies>
   <build>
     <finalName>IMS</finalName>
